--- a/ServerBookStore/views/book.ejs
+++ b/ServerBookStore/views/book.ejs
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         <select name="selectCate">
             <% Cates.forEach(function(cate){ %>
                 <option value="<%- cate._id %>"><%- cate.name %></option>
