--- a/ServerBookStore/views/Category/Category.ejs
+++ b/ServerBookStore/views/Category/Category.ejs
@@ -40,6 +40,7 @@
           <td><%- cate.name %></td>
           <td>
             <form action="" method="POST">
+              <button type="submit" class="btn btn-info">Detail</button>
               <button type="submit" class="btn btn-danger">Delete</button>
             </form>
           </td>
