--- a/ServerBookStore/views/Book/book.ejs
+++ b/ServerBookStore/views/Book/book.ejs
@@ -43,7 +43,7 @@
         <% listBooks.forEach(function(book,index){ %>
         <tr>
             <th scope="row"><%- index + 1 %></th>
-            <td><img src='/public/upload/1611551250954-Dac Nhan Tam.jpg' width="50" height="90"></td>
+            <td><img src='/upload/<%- book.image %>' width="50" height="90"></td>
             <td><%- book.name %></td>
             <td><%- book.author %></td>
             <td><%- book.price %>đ</td>
