--- a/ServerBookStore/views/Book/book.ejs
+++ b/ServerBookStore/views/Book/book.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>List Book</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
         text-align: center;
       }
       .table{
-        width: 1000px;
+        width: 1200px;
         margin-left: auto;
         margin-right: auto;
       }
@@ -46,7 +46,7 @@
             <td><img src='/upload/<%- book.image %>' width="50" height="90"></td>
             <td><%- book.name %></td>
             <td><%- book.author %></td>
-            <td><%- book.price %>đ</td>
+            <td><%- book.price %> đ</td>
             <td><%- book.pubCompany %></td>
             <td><%- book.datePublic %></td>
             <td><%- book.description %></td>
