--- a/ServerBookStore/views/home.ejs
+++ b/ServerBookStore/views/home.ejs
@@ -1,49 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home</title>
+  <title>Manager Book</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-      body{
-          width: 70%;
-          margin-left: auto;
-          margin-right: auto;
-      }
-  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Book Store</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="/book">List book</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Category<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-        <% listCategories.forEach(function(cate){ %>
-          <li>
-            <form action="/book" method="POST">
-                <button type="submit" class="btn btn-info" name='idCategory' value="<%- cate._id %>"><%- cate.name %></button>
-              </form>
-          </li>
-          <% }) %>
-        </ul>
-      </li>
-      <li><a href="#">Gener</a></li>
-    </ul>
-  </div>
-</nav>
-  
+<%- include('template/nav.ejs')  %>
 <div class="container">
-  <h3>Navbar With Dropdown</h3>
-  <p>This example adds a dropdown menu for the "Page 1" button in the navigation bar.</p>
 </div>
-
 </body>
 </html>
