--- a/ServerBookStore/views/Category/Category.ejs
+++ b/ServerBookStore/views/Category/Category.ejs
@@ -4,57 +4,46 @@
     <title>Category</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
-      h1{
-        text-align: center;
-      }
-      .table{
-        width: 500px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      a{
-        margin-left: 450px;
-      }
-      .btn{
-        display: inline;
-      }
     </style>
 </head>
 <body>
-  <h1>LIST OF BOOK TYPES OR GENRES</h1>
-  <a href="/addcategory"><button type="button" class="btn btn-info">Add Genre</button></a>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">No</th>
-        <th scope="col">Name Gener</th>
-        <th scope="col">Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% listCategories.forEach(function(cate,index){ %>
+  <%- include('../template/nav.ejs') %>
+  <div class="container">
+    <h1>LIST OF BOOK TYPES OR GENRES</h1>
+    <a href="/addcategory"><button type="button" class="btn btn-info">Add Genre</button></a>
+    <table class="table">
+      <thead>
         <tr>
-          <th scope="row"><%- index + 1 %></th>
-          <td><%- cate.name %></td>
-          <td> 
-              <form action="/xuly" method="POST">
-                <button type="submit" class="btn btn-danger" name="idCategory" value="<%- cate._id %>">Delete</button>
-              </form>
-              <form action="/book" method="POST">
-                <button type="submit" class="btn btn-info" name='idCategory' value="<%- cate._id %>">Detail</button>
-              </form>
-              <form action="/editcategory" method="POST">
-                <button class="btn btn-warning" name='idCategory' value="<%- cate._id %>">Edit</button>
-              </form>
-          </td>
+          <th scope="col">No</th>
+          <th scope="col">Name Gener</th>
+          <th scope="col">Action</th>
         </tr>
-      <% }) %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% listCategories.forEach(function(cate,index){ %>
+          <tr>
+            <th scope="row"><%- index + 1 %></th>
+            <td><%- cate.name %></td>
+            <td> 
+                <form action="/xuly" method="POST">
+                  <button type="submit" class="btn btn-danger" name="idCategory" value="<%- cate._id %>">Delete</button>
+                </form>
+                <form action="/book" method="POST">
+                  <button type="submit" class="btn btn-info" name='idCategory' value="<%- cate._id %>">Detail</button>
+                </form>
+                <form action="/editcategory" method="POST">
+                  <button class="btn btn-warning" name='idCategory' value="<%- cate._id %>">Edit</button>
+                </form>
+            </td>
+          </tr>
+        <% }) %>
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
