--- a/ServerBookStore/views/Category/Category.ejs
+++ b/ServerBookStore/views/Category/Category.ejs
@@ -30,7 +30,7 @@
             <th scope="row"><%- index + 1 %></th>
             <td><%- cate.name %></td>
             <td> 
-                <form action="/xuly" method="POST">
+                <form action="/xuly1" method="POST">
                   <button type="submit" class="btn btn-danger" name="idCategory" value="<%- cate._id %>">Delete</button>
                 </form>
                 <form action="/book" method="POST">
