--- a/ServerBookStore/views/template/nav.ejs
+++ b/ServerBookStore/views/template/nav.ejs
@@ -13,5 +13,11 @@
       <li class="nav-item">
           <a class="nav-link" href="/category">Category</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Log out</a>
+        </li>
     </ul>
   </nav>
