--- a/ServerBookStore/views/Book/editbook.ejs
+++ b/ServerBookStore/views/Book/editbook.ejs
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>EDIT BOOK</h1>
-    <form action="/xuly2" method="POST">
+    <form action="/book/update" method="POST">
         <div class="form-group">
             <label>ID</label>
             <input type="text" class="form-control" id="exampleInputEmail1" name='id' value="<%- book._id %>">
