--- a/ServerBookStore/views/Category/AddCategory.ejs
+++ b/ServerBookStore/views/Category/AddCategory.ejs
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>ADD BOOK TYPES OR GENRES</h1>
-    <form action="" method="POST" >
+    <form action="/category/upload" method="POST" >
         <div class="form-group">
             <label for="exampleInputEmail1">Name Gener</label>
             <input type="text" class="form-control" id="exampleInputEmail1" name='txtCate'>
