--- a/ServerBookStore/views/Category/EditCategory.ejs
+++ b/ServerBookStore/views/Category/EditCategory.ejs
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>EDIT CATEGORY </h1>
-    <form action="/xuly" method="POST" >
+    <form action="/category/update" method="POST" >
         <div class="form-group">
             <input type="text" class="form-control" id="exampleInputEmail1" name='txtid' value="<%- cate._id %>">
             <label for="exampleInputEmail1">Name Gener</label>
