--- a/ServerBookStore/views/Admin/login.ejs
+++ b/ServerBookStore/views/Admin/login.ejs
@@ -13,7 +13,7 @@
 
 <div class="container">
   <h2>Book Store Admin</h2>
-  <form action="" method="POST">
+  <form action="/login/process" method="POST">
     <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
