--- a/ServerBookStore/views/Book/addbook.ejs
+++ b/ServerBookStore/views/Book/addbook.ejs
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>ADD NEW BOOK</h1>
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form action="/book/upload" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label>Choose type of book</label>
             <select class="form-control form-control-lg" name='selectCate'>
