--- a/ServerBookStore/views/template/nav.ejs
+++ b/ServerBookStore/views/template/nav.ejs
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/profile">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Log out</a>
+          <a class="nav-link" href="/logout">Log out</a>
         </li>
     </ul>
   </nav>
