--- a/ServerBookStore/views/template/nav.ejs
+++ b/ServerBookStore/views/template/nav.ejs
@@ -14,7 +14,7 @@
           <a class="nav-link" href="/category">Category</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
+          <a class="nav-link" href="login/profile">Profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Log out</a>
