layout edit profile

--- a/ServerBookStore/views/Admin/profile.ejs
+++ b/ServerBookStore/views/Admin/profile.ejs
@@ -18,9 +18,8 @@
   <h5>Birthday: </h5><p><%- list.birthday %></p>
   <h5>Address: </h5><p><%- list.address %></p>
   <h5>Phonenumber: </h5><p><%- list.phonenumber %></p>
-  <form action="/category/edit" method="POST">
-    <button class="btn btn-warning">Edit</button>
-  </form>
+  
+  <a href="/login/editprofile"><button class="btn btn-warning">Edit</button></a>
 
 </div>
 
